--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,21 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>校友通</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+  <ion-slides *ngIf="!!banners" [options]="bannersSlideOptions" style="max-height: 200px;" #banner>
+    <ion-slide *ngFor="let banner of banners">
+      <img [src]="banner.image" />
+    </ion-slide>
+  </ion-slides>
+
+  <ion-grid>
+    <ion-row wrap>
+      <ion-col *ngFor="let item of sections" width-50>
+        <img [src]="item.icon" (click)="forwardTo(item);">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
