--- a/src/pages/organization-detail/organization-detail.html
+++ b/src/pages/organization-detail/organization-detail.html
@@ -52,20 +52,28 @@
         <p>活动时间：{{event.started_at}}</p>
       </button>
     </ion-list>
-    <ion-card-footer (click)="gotoEventList();">
+    <button *ngIf="organization.latest_events.length > 5" ion-item (click)="gotoEventList();">
       查看全部活动
-    </ion-card-footer>
+    </button>
   </ion-card>
 
   <!-- 最近加入成员 -->
-  <ion-card>
+  <ion-card *ngIf="organization && organization.latest_users.length > 0">
     <ion-card-header>
       最近加入成员
     </ion-card-header>
     <ion-list>
-      <ion-item>
-      <div [innerHtml]="organization?.body"></div>
-    </ion-item>
+      <button ion-item *ngFor="let user of organization.latest_users">
+        <ion-avatar item-left>
+          <img src="{{user.avatar || 'assets/img/default_avatar.png'}}" />
+        </ion-avatar>
+        <h2>{{user.nickname || user.hack_mobile}}</h2>
+        <p>{{user.specialty}}&nbsp;&nbsp;{{user.graduation}}</p>
+        <button ion-button outline color="primary" item-right>私信</button>
+      </button>
     </ion-list>
+    <button *ngIf="organization.latest_users.length > 5" ion-item (click)="gotoUserList();">
+      查看所有成员
+    </button>
   </ion-card>
 </ion-content>
