--- a/src/pages/club-detail/club-detail.html
+++ b/src/pages/club-detail/club-detail.html
@@ -66,13 +66,13 @@
       最近加入成员
     </ion-card-header>
     <ion-list>
-      <button ion-item *ngFor="let user of club.latest_users">
+      <button ion-item *ngFor="let user of club.latest_users" text-wrap (click)="gotoUserDetail(user);">
         <ion-avatar item-left>
           <img src="{{user.avatar || 'assets/img/default_avatar.png'}}" />
         </ion-avatar>
         <h2>{{user.nickname || user.hack_mobile}}</h2>
         <p>{{user.specialty}}&nbsp;&nbsp;{{user.graduation}}</p>
-        <button ion-button outline color="primary" item-right>私信</button>
+        <button ion-button outline color="primary" item-right (click)="openChat(user)">私信</button>
       </button>
     </ion-list>
     <button *ngIf="club.latest_users.length > 5" ion-item (click)="gotoUserList();">
