--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="首页" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="消息" tabIcon="chatbubbles"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="消息" tabIcon="chatbubbles" tabBadge="{{messageCount > 0 ? messageCount : ''}}" tabBadgeStyle="danger"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="我的" tabIcon="ios-contact-outline"></ion-tab>
 </ion-tabs>
